# ebay_easy_api

./: Cargo.toml  README.md  crates.js  help.html  search-index.js  settings.html  src-files.js
.github/workflows/: docgen.yml
ebay_easy_api/: all.html  index.html  sidebar-items.js  struct.EbayApiClient.html  type.ReadOnlyString.html  type.ReadOnlyVec.html
ebay_easy_api/error/: enum.Error.html  index.html  sidebar-items.js  struct.ApiError.html
ebay_easy_api/models/: enum.Currency.html  enum.Marketplace.html  index.html  sidebar-items.js  struct.Category.html  struct.CategoryPath.html  struct.Image.html  struct.InvalidMarketplace.html  struct.Item.html  struct.Location.html  struct.Price.html  struct.SearchItem.html  struct.SearchResults.html  struct.Seller.html
ebay_easy_api/models/category/: struct.Category.html  struct.CategoryPath.html
ebay_easy_api/models/image/: struct.Image.html
ebay_easy_api/models/item/: struct.Item.html
ebay_easy_api/models/location/: struct.Location.html
ebay_easy_api/models/marketplace/: enum.Marketplace.html  struct.InvalidMarketplace.html
ebay_easy_api/search/: index.html  struct.Browser.html
examples/: search.rs
search.desc/ebay_easy_api/: ebay_easy_api-desc-0-.js
src/: error.rs  lib.rs
src/ebay_easy_api/: error.rs.html  lib.rs.html
src/ebay_easy_api/models/: image.rs.html  (+8 more)
src/models/: category.rs  image.rs  item.rs  location.rs  marketplace.rs  mod.rs  price.rs  search.rs  seller.rs
src/search/: browsing.rs  mod.rs  searcher.rs
src/utils/: jsonify_response.rs  mod.rs
tests/: bad_token.rs  empty_search.rs
(+35 files in other folders)
