[package]
name = "ebay_easy_api"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = [
    "serde",
    "std",
] }
derive_more = { version = "0.99.18", default-features = false, features = [
    "display",
] }
reqwest = { version = "0.12.5", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
rust_decimal = { version = "1.35.0", default-features = false, features = [
    "serde",
    "serde-arbitrary-precision",
    "serde-float",
    "serde-str",
    "std",
] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
serde_with = "3.9.0"
thiserror = "1.0.63"
